# BI_ML_2021

./: .gitignore  README.md  pyproject.toml  requirements.txt
l01_knn/code/: KNN.ipynb  knn.py  metrics.py  requirements.txt
l2_linmodels_GD/: requirements.txt
l2_linmodels_GD/code/: Linear_models.ipynb
l3_clustering/: requirements.txt
l3_clustering/code/: Cluster_tSNE.ipynb
l3_clustering/data_folder/: pref_results_Spectral.csv  results_Agglomerative.csv  results_Agglomerative.scv  results_Spectral.scv
l4_trees/code/: dt_lecture_practice.ipynb
l5_ensembles/: requirements.txt
l5_ensembles/code/: Ensembles.ipynb
l6_kaggle/code/: dota2-win-prediction-baseline.ipynb  dota2-win.ipynb  dota2-win2.ipynb
l7_cnn/: pyproject.toml
l7_cnn/code/: hw_cnn_01.ipynb
