[tool.poetry]
name = "BI_ML_2021"
version = "0.1"
description = "Machine Learning BI course."
repository = "https://github.com/Freddsle/BI_ML_2021/"
authors = ["Yuliya Burankova"]

[tool.poetry.dependencies]
python = ">3.10,<3.11"
numpy = "^1.22.2"
matplotlib = "^3.5.1"
seaborn = "^0.11.2"
sklearn = "^0.0"
statsmodels = "^0.13.2"
yellowbrick = "^1.4"
xgboost = "^1.5.2"
lightgbm = "^3.3.2"
catboost = "^1.0.4"


[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"
